--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,8 @@
+ion-tab-button {
+  --color: #1f1f1f;
+  --color-selected: var(--ion-color-danger);
 
+  &.tab-selected::before {
+    --background-color: var(--ion-color-danger);
+  }
+}
