chore: add sqlite and implements new buy

--- a/src/app/new-buy/components/list/list.component.html
+++ b/src/app/new-buy/components/list/list.component.html
@@ -1,6 +1,9 @@
 <ion-list class="list">
   <ion-item *ngFor="let obj of listProdutos; let i = index">
-    <ion-label>{{ obj?.produto }}</ion-label>
+    <ion-label>
+      {{ obj?.produto }}
+      {{ obj?.valor ? " - " + (obj?.valor | currency: "BRL") : "" }}
+    </ion-label>
     <ion-button color="danger" (click)="delete(i)">
       <ion-icon name="trash-outline"></ion-icon>
     </ion-button>
