--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,7 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-card>
-    <ion-card-content></ion-card-content>
-  </ion-card>
+  <app-apresentation-cards></app-apresentation-cards>
 </ion-content>
