--- a/src/app/pages/check-items-buy/check-items-buy.page.scss
+++ b/src/app/pages/check-items-buy/check-items-buy.page.scss
@@ -1,9 +1,3 @@
 .del {
-  --text-decoration: line-through !important;
-}
-
-ion-content {
-  --padding-end: 5%;
-  --padding-start: 5%;
-  --padding-top: 3%;
+  text-decoration: line-through !important;
 }
