--- a/src/app/pages/list-buys/components/list/list.component.html
+++ b/src/app/pages/list-buys/components/list/list.component.html
@@ -5,7 +5,7 @@
     <ion-button color="danger" (click)="onDelete(obj.id)">
       <ion-icon name="trash-outline"></ion-icon>
     </ion-button>
-    <ion-button color="warning" (click)="onSelectCompra(obj.id)">
+    <ion-button color="warning" (click)="onSelectCompra(obj.id, obj.descricao)">
       <ion-icon name="pencil"></ion-icon>
     </ion-button>
   </ion-item>
