--- a/src/app/tab1/components/apresentation-cards/apresentation-cards.component.html
+++ b/src/app/tab1/components/apresentation-cards/apresentation-cards.component.html
@@ -1,20 +1,12 @@
-<ion-card>
-  <ion-card-content>
-    <ion-list>
-      <ion-item
-        button
-        *ngFor="let obj of list"
-        routerLink="/tabs/{{ obj.path }}"
-      >
-        <ion-avatar slot="start">
-          <img [src]="obj.imgUrl" />
-        </ion-avatar>
+<ion-list>
+  <ion-item button *ngFor="let obj of list" routerLink="/tabs/{{ obj.path }}">
+    <ion-avatar slot="start">
+      <img [src]="obj.imgUrl" />
+    </ion-avatar>
 
-        <ion-label>
-          {{ obj.title }}
-          <p>{{ obj.description }}</p>
-        </ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-card-content>
-</ion-card>
+    <ion-label>
+      {{ obj.title }}
+      <p>{{ obj.description }}</p>
+    </ion-label>
+  </ion-item>
+</ion-list>
