--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -10,6 +10,6 @@
       <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <app-chart></app-chart>
   <app-apresentation-cards></app-apresentation-cards>
 </ion-content>
